fix header css alignment

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -46,6 +46,7 @@
     align-items: center;
     display: flex;
     flex-direction: row;
+    justify-self: flex-end;
 }
 
 .linkItem {
